--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,77 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: green;
+}
+.card {
+  background-color: white;
+  width: 300px;
+  height: 450px;
+  border-radius: 10px;
+  margin: 10px auto;
+}
+.cardValue {
+  font-size: 100px;
+  margin: auto;
+  font-family: "Times New Roman", Times, serif;
+}
+.heart:before {
+  content: "♥";
+  color: red;
+  font-size: 90px;
+  margin-right: 230px;
+  margin-top: -20px;
+}
+.heart:after {
+  content: "♥";
+  color: red;
+  font-size: 90px;
+  margin-left: 230px;
+  margin-bottom: -15px;
+  transform: rotate(180deg);
+}
+.diamond:before {
+  content: "♦";
+  color: red;
+  font-size: 90px;
+  margin-right: 230px;
+  margin-top: -20px;
+}
+.diamond:after {
+  content: "♦";
+  color: red;
+  font-size: 90px;
+  margin-left: 230px;
+  margin-bottom: -15px;
+  transform: rotate(180deg);
+}
+.club:before {
+  content: "♣";
+  color: black;
+  font-size: 90px;
+  margin-right: 230px;
+  margin-top: -20px;
+}
+.club:after {
+  content: "♣";
+  color: black;
+  font-size: 90px;
+  margin-left: 230px;
+  margin-bottom: -15px;
+  transform: rotate(180deg);
+}
+.spade:before {
+  content: "♠";
+  color: black;
+  font-size: 90px;
+  margin-right: 230px;
+  margin-top: -20px;
+}
+.spade:after {
+  content: "♠";
+  color: black;
+  font-size: 90px;
+  margin-left: 230px;
+  margin-bottom: -15px;
+  transform: rotate(180deg);
+}
