same color for value and suit

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,10 @@ body {
   margin: auto;
   font-family: "Times New Roman", Times, serif;
 }
+.heart,
+.diamond {
+  color: red;
+}
 .heart:before {
   content: "♥";
   color: red;
